@@ -12,6 +12,8 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 
 2017-05-30 niel
 	Mrg: PR 2445, from nightah - Reworked all Anime release naming regexes.
+	Fix: Missing category from new Predb entries that was accidentally overlooked during recent
+		refactoring.
 2017-05-28 niel
 	Chg: Predb model: Change occurences of 'name' to 'title', even variable names as it is obviously
 		confusing me!
